# evobench

./: .gitignore  404.html  LICENSE  README.md  SETUP_CONFIG.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_experiments.py  run_experiments_2.py
.github/: CODEOWNERS
.github/workflows/: deploy.yml  publish.yml  test.yml
DOCS_STRUCTURE/: index.html
EXAMPLES_GALLERY/: index.html
GLOSSARY/: index.html
changelog/v0.1.0/: index.html
developer/ARCHITECTURE/: index.html
developer/CONTRIBUTING/: index.html
developer/TEST_STRATEGY/: index.html
docs/: CHANGELOG.md  DOCS_STRUCTURE.md  EXAMPLES_GALLERY.md  GLOSSARY.md  SETUP_CONFIG.md  benchmarks.md  index.md
docs/changelog/: v0.1.0.md
docs/developer/: ARCHITECTURE.md  CONTRIBUTING.md  TEST_STRATEGY.md
docs/faq/: TROUBLESHOOTING.md  research_faq.md
docs/getting-started/: SETUP_CONFIG.md
docs/guide/: PERFORMANCE_AND_REPRODUCIBILITY.md  VISUALIZATION.md
docs/reference/: base.md  benchmarks.md  index.md
docs/reference/algorithms/: abc.md  eda.md  index.md  pso.md
docs/theory/: POST_HOC_GUIDE.md  benchmark-functions.md  index.md  statistical-testing.md
examples/: 01_basic_usage.py  02_multimodal_comparison.py  03_statistical_analysis.py  04_custom_algorithm.py  05_advanced_tuning.py  README.md
faq/TROUBLESHOOTING/: index.html
faq/research_faq/: index.html
getting-started/SETUP_CONFIG/: index.html
guide/PERFORMANCE_AND_REPRODUCIBILITY/: index.html
guide/VISUALIZATION/: index.html
reference/: index.html
reference/algorithms/: index.html
reference/algorithms/abc/: index.html
reference/algorithms/eda/: index.html
reference/algorithms/pso/: index.html
reference/base/: index.html
reference/benchmarks/: index.html
search/: search_index.json
src/evobench/: __init__.py  base.py  benchmarks.py
src/evobench/algorithms/: __init__.py  bee.py  eda.py  pso.py
src/evobench/stats/: __init__.py  analyzer.py  core_tests.py  post_hoc.py  reporter.py
src/evobench/tools/: __init__.py  experiment_engine.py  operators.py  plotter.py  statistics.py
tests/: conftest.py  test_base.py  test_benchmarks.py  test_operators.py  test_statistics.py
tests/acceptance/: test_user_workflows.py
tests/unit/: test_base.py  test_facade_integrity.py  test_statistics.py
theory/: index.html
theory/POST_HOC_GUIDE/: index.html
theory/benchmark-functions/: index.html
theory/statistical-testing/: index.html
