[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evobench"
version = "0.1.0"
authors = [
  { name = "Enrique Gómez Linares" },
  { name = "Victoria Galván Delgadillo" }
]
description = "A benchmarking suite for evolutionary algorithms and metaheuristics"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
# Designates the 'src' directory as the primary location for package source discovery.
where = ["src"]

[tool.pytest.ini_options]
# Extends the Python search path to include the 'src' directory, enabling cleaner
# absolute imports and facilitating proper module resolution during testing.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
# Enables automatic discovery and inclusion of non-Python resource files 
# located within the package subdirectories.
include-package-data = true

[tool.setuptools.package-data]
# Identifies specific non-source assets, such as metadata and configuration files, 
# that are required to be bundled within the package distribution for runtime access.
"evobench" = ["*.json", "*.txt", "py.typed"]

[tool.setuptools.data-files]
# Manages the distribution of auxiliary files intended for placement outside the core 
# package structure, such as system-level documentation or configuration templates.
# Note: Direct environmental modification is handled with caution; standard 
# source distributions typically utilize MANIFEST.in for non-essential assets.