[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evobench"
version = "0.1.0"
authors = [
  { name = "Enrique Gómez Linares" },
  { name = "Victoria Galván Delgadillo" }
]
description = "A comprehensive benchmarking suite for evolutionary algorithms and metaheuristics with built-in statistical analysis and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Comprehensive PyPI classifiers for scientific computing
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "evolutionary-algorithms",
    "metaheuristics",
    "optimization",
    "benchmark",
    "pso",
    "artificial-bee-colony",
    "eda",
    "benchmarking-framework",
    "swarm-intelligence"
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
]

[project.urls]
"Homepage" = "https://newtongomez.github.io/evobench/"
"Documentation" = "https://newtongomez.github.io/evobench/reference/"
"Repository" = "https://github.com/NewtonGomez/evobench.git"
"Bug Tracker" = "https://github.com/NewtonGomez/evobench/issues"
"Changelog" = "https://github.com/NewtonGomez/evobench/blob/main/docs/changelog/v0.1.0.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mkdocs>=1.4.0"
]
science = [
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0"
]

[tool.setuptools.packages.find]
# Designates the 'src' directory as the primary location for package source discovery.
where = ["src"]

[tool.pytest.ini_options]
# Extends the Python search path to include the 'src' directory, enabling cleaner
# absolute imports and facilitating proper module resolution during testing.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
# Enables automatic discovery and inclusion of non-Python resource files 
# located within the package subdirectories.
include-package-data = true

[tool.setuptools.package-data]
# Identifies specific non-source assets, such as metadata and configuration files, 
# that are required to be bundled within the package distribution for runtime access.
"evobench" = ["*.json", "*.txt", "py.typed"]

[tool.setuptools.data-files]
# Manages the distribution of auxiliary files intended for placement outside the core 
# package structure, such as system-level documentation or configuration templates.
# Note: Direct environmental modification is handled with caution; standard 
# source distributions typically utilize MANIFEST.in for non-essential assets.
