[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evobench-lib"
version = "1.0.0"
authors = [
  { name = "Enrique Gómez Linares" },
  { name = "Victoria Galván Delgadillo" }
]
description = "A comprehensive benchmarking suite for evolutionary algorithms and metaheuristics with built-in statistical analysis and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }

# Comprehensive PyPI classifiers for scientific computing
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",  # ← Actualizado a Estable para la 1.0.0
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "evolutionary-algorithms",
    "metaheuristics",
    "optimization",
    "benchmark",
    "pso",
    "artificial-bee-colony",
    "eda",
    "benchmarking-framework",
    "swarm-intelligence"
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",  # ← Mover aquí (Crucial para evitar fallos de importación)
]

[project.urls]
"Homepage" = "https://newtongomez.github.io/evobench/"
"Documentation" = "https://newtongomez.github.io/evobench/reference/"
"Repository" = "https://github.com/NewtonGomez/evobench.git"
"Bug Tracker" = "https://github.com/NewtonGomez/evobench/issues"
"Changelog" = "https://github.com/NewtonGomez/evobench/blob/main/CHANGELOG.md"  # ← Enlace al archivo global

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mkdocs>=1.4.0"
]
science = [
    "scikit-learn>=1.2.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"evobench" = ["*.json", "*.txt", "py.typed"]